--- a/system/pom.xml
+++ b/system/pom.xml
@@ -1,60 +1,63 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-	
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+
 	<modelVersion>4.0.0</modelVersion>
-	
-	
+
+
 	<organization>
 		<url>http://www.taulukko.com.br</url>
 		<name>Taulukko</name>
 	</organization>
 	<name>Taulukko Common Parsers</name>
 	<description>A common parsers Taulukko project</description>
-	
+
 	<url>https://github.com/Taulukko/taulukko-commons-parsers</url>
 
 	<groupId>com.taulukko.commons</groupId>
 	<artifactId>taulukko-commons-parsers</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.5</version>	
+	<version>1.0.6-SNAPSHOT</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<junit.version>4.11</junit.version>
 		<jdk.version>1.7</jdk.version>
 		<servlet.version>2.5</servlet.version>
+		<encoding>UTF-8</encoding>
 	</properties>
 
-  
-		 <!-- [ means closet, inclusive. ) means open, excluisive. Eg. [1.0.0,2.0.0) means 1.0.0 - >  2.0.0 (except 2.0.0)-->	
+
+	<!-- [ means closet, inclusive. ) means open, excluisive. Eg. [1.0.0,2.0.0) 
+		means 1.0.0 - > 2.0.0 (except 2.0.0) -->
 	<dependencies>
- 
+
 		<dependency>
-	      <groupId>junit</groupId>
-	      <artifactId>junit</artifactId>
-	      <version>4.11</version>
-	      <scope>test</scope>
-	    </dependency>
-	    		 	  
-		<dependency>
-		    <groupId>com.taulukko.commons</groupId>
-		    <artifactId>taulukko-commons-util</artifactId>
-		    <version>1.1.9</version>
+			<groupId>junit</groupId>
+			<artifactId>junit</artifactId>
+			<version>4.11</version>
+			<scope>test</scope>
 		</dependency>
-					
+
+		<dependency>
+			<groupId>com.taulukko.commons</groupId>
+			<artifactId>taulukko-commons-util</artifactId>
+			<version>1.1.9</version>
+		</dependency>
+
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
 			<version>2.3.1</version>
 		</dependency>
-							
+
 		<dependency>
 			<groupId>org.jsoup</groupId>
 			<artifactId>jsoup</artifactId>
 			<version>1.7.3</version>
 		</dependency>
-									
-							
+
+
 	</dependencies>
 
 	<build>
@@ -64,6 +67,7 @@
 				<artifactId>maven-compiler-plugin</artifactId>
 				<version>3.0</version>
 				<configuration>
+					<argLine>-Dfile.encoding=${encoding}</argLine>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 				</configuration>
@@ -71,15 +75,16 @@
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-war-plugin</artifactId>
-				<version>2.4</version> 
+				<version>2.4</version>
 			</plugin>
-			 <plugin>
+			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-surefire-plugin</artifactId>
 				<version>2.18.1</version>
 				<configuration>
+					<argLine>-Dfile.encoding=${encoding}</argLine>
 					<excludes>
-						<exclude>integration/**/*Test.java</exclude>						
+						<exclude>integration/**/*Test.java</exclude>
 					</excludes>
 					<includes>
 						<include>**/taulukko/**/*Test.java</include>
@@ -89,53 +94,63 @@
 		</plugins>
 
 	</build>
-	
-	<profiles>		 
+
+	<profiles>
 		<profile>
 			<id>production</id>
 			<activation>
 				<property>
-			      <name>profile</name>
-			      <value>production</value>
-		      	</property>
-	      	</activation>
+					<name>profile</name>
+					<value>production</value>
+				</property>
+			</activation>
 			<build>
 				<plugins>
-				 <plugin>
-				      <artifactId>maven-antrun-plugin</artifactId>
-				      <version>1.7</version>
-				      <executions>
-				        <execution>
-				          <phase>prepare-package</phase>
-				           <goals>
-		                       <goal>run</goal>
-		                   </goals>
-				          <configuration>
-				            <target>
-				             <echo>Replace file...</echo>
-				               <delete file="${project.build.outputDirectory}/taulukko.properties" />
-				              <copy file="${project.build.outputDirectory}/taulukko.properties"
-				                tofile="${project.build.outputDirectory}/taulukko.properties" overwrite="true"/>
-				            </target>
-				          </configuration> 
-				        </execution>
-				      </executions>
-				    </plugin> 
-					
-					 <plugin>
+					<plugin>
+						<artifactId>maven-antrun-plugin</artifactId>
+						<version>1.7</version>
+						<executions>
+							<execution>
+								<phase>prepare-package</phase>
+								<goals>
+									<goal>run</goal>
+								</goals>
+								<configuration>
+									<target>
+										<echo>Replace file...</echo>
+										<delete file="${project.build.outputDirectory}/taulukko.properties" />
+										<copy file="${project.build.outputDirectory}/taulukko.properties"
+											tofile="${project.build.outputDirectory}/taulukko.properties"
+											overwrite="true" />
+									</target>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
+
+					<plugin>
 						<groupId>org.apache.maven.plugins</groupId>
 						<artifactId>maven-surefire-plugin</artifactId>
 						<version>2.18.1</version>
 						<configuration>
+							<argLine>-Dfile.encoding=${encoding}</argLine>
 							<includes>
-								<include>**/noTest/**/*Test.java</include>								
+								<include>**/noTest/**/*Test.java</include>
 							</includes>
+						</configuration>
+					</plugin>
+
+					<plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-resources-plugin</artifactId>
+						<configuration>
+							<encoding>${encoding}</encoding>
 						</configuration>
 					</plugin>
 				</plugins>
 			</build>
-		</profile> 
+		</profile>
 	</profiles>
 
-	
+
 </project>
