--- a/system/pom.xml
+++ b/system/pom.xml
@@ -17,7 +17,7 @@
 	<groupId>com.taulukko.commons</groupId>
 	<artifactId>taulukko-commons-parsers</artifactId>
 	<packaging>jar</packaging>
-	<version>1.0.6-SNAPSHOT</version>
+	<version>1.0.6</version>
 
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -38,17 +38,19 @@
 			<version>4.11</version>
 			<scope>test</scope>
 		</dependency>
-
+		
 		<dependency>
-			<groupId>com.taulukko.commons</groupId>
-			<artifactId>taulukko-commons-util</artifactId>
-			<version>1.1.9</version>
+		    <groupId>com.taulukko.commons</groupId>
+		    <artifactId>taulukko-commons-util</artifactId>
+		    <version>1.1.13</version>
 		</dependency>
+
+ 
 
 		<dependency>
 			<groupId>com.google.code.gson</groupId>
 			<artifactId>gson</artifactId>
-			<version>2.3.1</version>
+			<version>2.8.0</version>
 		</dependency>
 
 		<dependency>
@@ -62,15 +64,36 @@
 
 	<build>
 		<plugins>
+			 
+            			<!-- To total integration with eclipse and groovy, add groovy support 
+				from distribuition https://github.com/groovy/groovy-eclipse/wiki -->
+			<!-- To neon http://dist.springsource.org/snapshot/GRECLIPSE/e4.6/ -->
+			<!-- To luna http://dist.springsource.org/release/GRECLIPSE/e4.4/ -->
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
-				<version>3.0</version>
+				<version>3.1</version>
 				<configuration>
+					<compilerId>groovy-eclipse-compiler</compilerId>
 					<argLine>-Dfile.encoding=${encoding}</argLine>
 					<source>${jdk.version}</source>
 					<target>${jdk.version}</target>
 				</configuration>
+				<dependencies>
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-eclipse-compiler</artifactId>
+						<version>2.9.1-01</version>
+					</dependency>
+					<!-- for 2.8.0-01 and later you must have an explicit dependency on 
+						groovy-eclipse-batch -->
+					<dependency>
+						<groupId>org.codehaus.groovy</groupId>
+						<artifactId>groovy-eclipse-batch</artifactId>
+						<version>2.3.7-01</version>
+					</dependency>
+				</dependencies>
+
 			</plugin>
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
@@ -91,7 +114,11 @@
 					</includes>
 				</configuration>
 			</plugin>
+			
+			 
 		</plugins>
+		
+		
 
 	</build>
 
